- 04/01/2022
37. qmail-inject.c, smtpd.c - configurable DATABYTES
38. qmail-clean.c, qmail-qread.c, qmail-queue.c, qmail-rm.c, qmail-send.c,
    qmail-todo.c, qmail-showctl.c, qmail-start.c, qmta-send.c, slowq-send.c
    qscheduler.c, queue-fix.c, readsubdir.c, readsubdir.h configurable bigtodo
- 05/01/2022
39. smtpd.c, ofmipd.c, etrn.c, atrn.c, qmail-showctl,c ldap-checkpwd.c,
	sys-checkpwd.c, qmail-rspawn.c, qmail-poppass.c: replace execvp with execv
- 19/01/2022
40. qscheduler.c: use log_out functions instead of strerr_warn for logging
    messages
41. qmail-send.c: display pid when exiting
42. qmail-todo.c, trigger.c, trigger.h: remove/add lock/trigger based on
    dynamic/compat mode
- 24/01/2022
43. autorepsonder.c: use prefix for qmail-inject
44. qmail-showctl.c: use previx for svctool
45. qmta-send.c: Replaced execv with execvp
46. svctool: prevent overwriting servercert.cnf
- 06/02/2022
47. svctool: create local queue variables if different from global variable
    value
- 07/02/2022
48. svctool: create CONFSPLIT, QUEUE_COUNT, QUEUE_BASE, QUEUE_START as global
    vars

* 
Release 2.14.0 Start 18/07/2021
======= Release Highlights ================================================
o alpine linux ready - openrc script, svctool, minisvc
o github packages - docker/podman images for
  [docker/podman](https://ghcr.io/mbhangui/indimail-mta)
o instant reconfiguration of domain for docker/podman containers
o use global variables directory /etc/indimail/control/global_vars for
  DEFAULT_DOMAIN, QMAILDEFAULTHOST
o installer can now install, uninstall and set permissions
o New control file dkimkeys to override DKIMKEY and allow domain specfic
  keys and selector
===========================================================================
- 18/07/2021
1.  autoresponder.c: conditional define of _XOPEN_SOURCE to avoid
    compilation warning on alpine
2.  Makefile: Fix compilation of qmail-rm target by check for fts lib